Stop chaning the font on mobile for blog

--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -340,7 +340,6 @@ pre.highlight {
     padding-left: 1.7em;
     padding-right: 1.7em;
     padding-top: 1.5em;
-    font-family: "Libre Franklin", "Helvetica Neue", Helvetica, Arial, sans-serif;
     color: #696969;
   }
 
